--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,8 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
-<!-- <script src="cordova.js"></script> -->
+	<script src="lib/ng-cordova.min.js"></script>
+	<script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
