--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,12 @@
     <script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/services.js"></script>
+	<script src="js/syncing.js"></script>
+	<script src="js/directives.js"></script>
+	<script src="js/filters.js"></script>
   </head>
   <body ng-app="starter">
 <ion-nav-view></ion-nav-view>
-   
   </body>
+  
 </html>
